--- a/app/src/main/res/values-sw400dp-land/dimens.xml
+++ b/app/src/main/res/values-sw400dp-land/dimens.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="keyboard_button_margin">10dp</dimen>
+    <dimen name="keyboard_button_margin">6dp</dimen>
+    <dimen name="keyboard_button_vertical_margin">10dp</dimen>
     <dimen name="keyboard_button_text">16dp</dimen>
     <dimen name="dedicated_button_margin">2dp</dimen>
     <dimen name="land_min_width">400dp</dimen>
+    <dimen name="keyboard_button_land_bottom_margin">-50dp</dimen>
 </resources>
