--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:textSize="32sp"
+            android:textSize="@dimen/res_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Result: 0"
@@ -68,6 +68,7 @@
             android:text="@string/calculate"
             android:layout_marginBottom="20dp"
             android:textColor="?attr/calcButtonFontColor"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/keyboard_grid"/>
 
         <GridLayout
