--- a/app/src/main/res/values-sw400dp/dimens.xml
+++ b/app/src/main/res/values-sw400dp/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="dedicated_button_margin">12dp</dimen>
     <dimen name="land_min_width">400dp</dimen>
     <dimen name="keyboard_button_land_bottom_margin">-50dp</dimen>
+    <dimen name="res_text_size">28dp</dimen>
 </resources>
