--- a/app/src/main/res/values-sw650dp-land/dimens.xml
+++ b/app/src/main/res/values-sw650dp-land/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="dedicated_button_margin">4dp</dimen>
     <dimen name="land_min_width">600dp</dimen>
     <dimen name="keyboard_button_land_bottom_margin">6dp</dimen>
+    <dimen name="res_text_size">32dp</dimen>
 </resources>
