--- a/app/src/main/res/values-sw650dp/dimens.xml
+++ b/app/src/main/res/values-sw650dp/dimens.xml
@@ -3,8 +3,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="keyboard_button_margin">8dp</dimen>
     <dimen name="keyboard_button_vertical_margin">8dp</dimen>
-    <dimen name="keyboard_button_text">20dp</dimen>
+    <dimen name="keyboard_button_text">28dp</dimen>
     <dimen name="dedicated_button_margin">12dp</dimen>
     <dimen name="land_min_width">600dp</dimen>
     <dimen name="keyboard_button_land_bottom_margin">-70dp</dimen>
+    <dimen name="res_text_size">32dp</dimen>
 </resources>
