--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="dedicated_button_margin">8dp</dimen>
     <dimen name="land_min_width">360dp</dimen>
     <dimen name="keyboard_button_land_bottom_margin">-30dp</dimen>
+    <dimen name="res_text_size">24dp</dimen>
 </resources>
