Add a permission request page. (Not functional, just backup)

--- a/app/src/main/res/values-night-v31/themes.xml
+++ b/app/src/main/res/values-night-v31/themes.xml
@@ -24,5 +24,6 @@
         <!-- Customize your theme here. -->
         <item name="textFillColor">#66FFFFFF</item>
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
+        <item name="outlinedFillColor">@color/black</item>
     </style>
 </resources>
