--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -22,6 +22,6 @@
         <item name="textFillColor">#66FFFFFF</item>
         <!-- Customize your theme here. -->
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
-
+        <item name="outlinedFillColor">@color/black</item>
     </style>
 </resources>
