Adjust button paddings for ease of taps on different screens.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -81,6 +81,7 @@
                 android:textColor="?attr/calcButtonFontColor"
                 android:layout_margin="20dp"
                 android:textSize="18sp"
+                android:minHeight="@dimen/keyboard_button_minHeight"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -111,6 +112,8 @@
 
                 <Button
                     android:id="@+id/kb_mc"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#1100aa00"
                     android:text="MC"
@@ -119,6 +122,8 @@
 
                 <Button
                     android:id="@+id/kb_mp"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#1100aa00"
                     android:text="M+"
@@ -127,6 +132,8 @@
 
                 <Button
                     android:id="@+id/kb_mm"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#1100aa00"
                     android:text="M-"
@@ -135,6 +142,8 @@
 
                 <Button
                     android:id="@+id/kb_mr"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#1100aa00"
                     android:text="MR"
@@ -143,30 +152,38 @@
 
                 <Button
                     android:id="@+id/kb_func"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#1100aa00"
-                    android:text="func"
+                    android:text="fun"
                     android:textSize="@dimen/keyboard_button_text"
                     android:layout_columnWeight="1"/>
 
                 <Button
                     android:id="@+id/kb_const"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#1100aa00"
-                    android:text="cons"
+                    android:text="con"
                     android:textSize="@dimen/keyboard_button_text"
                     android:layout_columnWeight="1"/>
 
                 <Button
                     android:id="@+id/kb_c"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#11aa0000"
-                    android:text="C"
+                    android:text=" C "
                     android:textSize="@dimen/keyboard_button_text"
                     android:layout_columnWeight="1"/>
 
                 <Button
                     android:id="@+id/kb_back"
+                    android:minWidth="5dp"
+                    android:minHeight="@dimen/keyboard_button_minHeight"
                     android:layout_marginStart="@dimen/keyboard_button_margin"
                     android:backgroundTint="#11aa0000"
                     android:text="←"
