--- a/app/src/main/res/values-sw400dp/dimens.xml
+++ b/app/src/main/res/values-sw400dp/dimens.xml
@@ -5,7 +5,8 @@
     <dimen name="keyboard_button_vertical_margin">6dp</dimen>
     <dimen name="keyboard_button_text">18dp</dimen>
     <dimen name="dedicated_button_margin">12dp</dimen>
-    <dimen name="land_min_width">400dp</dimen>
+    <dimen name="land_min_width">356dp</dimen>
     <dimen name="keyboard_button_land_bottom_margin">-50dp</dimen>
     <dimen name="res_text_size">28dp</dimen>
+    <dimen name="keyboard_button_minHeight">54dp</dimen>
 </resources>
