--- a/app/src/main/res/layout/fragment_about_dialog.xml
+++ b/app/src/main/res/layout/fragment_about_dialog.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="GitHub: https://github.com/HoraceHuang-ui/FreeCalc_Android"
         android:autoLink="web"
         android:layout_marginStart="22dp"
+        android:layout_marginEnd="22dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
