--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,9 @@
             android:title="@string/menu_item_deg" />
     </group>
 
+    <item android:id="@+id/action_more_dialog"
+        android:title="More Options" />
+
     <item android:id="@+id/action_accuracy_dialog"
         android:title="@string/menu_item_accuracy"/>
 
