--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FreeCalc_Material3Test" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.FreeCalc_Material3Test" parent="Base.Theme.FreeCalc_Material3Test">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/material_dynamic_primary70</item>
         <item name="colorPrimaryVariant">@color/material_dynamic_neutral_variant50</item>
@@ -17,12 +17,11 @@
         <!-- For text input fields -->
         <item name="textInputStyle">@style/Widget.Material3.TextInputLayout.OutlinedBox</item>
         <!-- For switches -->
-        <item name="switchStyle">@style/Widget.Material3.CompoundButton.Switch</item>
+        <item name="switchStyle">@style/App.Switches</item>
         <!-- For buttons -->
         <item name="buttonStyle">@style/Widget.AppCompat.Button</item>
         <!-- Customize your theme here. -->
         <item name="textFillColor">#66000000</item>
-        <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
         <item name="outlinedFillColor">@color/white</item>
     </style>
 
@@ -31,5 +30,10 @@
         <item name="cornerSize">50%</item>
         <item name="strokeColor">?attr/colorPrimary</item>
         <item name="backgroundTint">@color/white</item>
+    </style>
+
+    <style name="App.Switches" parent="Widget.Material3.CompoundButton.Switch">
+        <item name="track">@drawable/switch_track</item>
+        <item name="android:thumb">@drawable/switch_thumb</item>
     </style>
 </resources>
