--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,11 +10,11 @@
             android:title="@string/menu_item_deg" />
     </group>
 
-    <item android:id="@+id/action_more_dialog"
-        android:title="More Options" />
-
     <item android:id="@+id/action_accuracy_dialog"
         android:title="@string/menu_item_accuracy"/>
+
+    <item android:id="@+id/action_more_dialog"
+        android:title="@string/more_options" />
 
     <item android:id="@+id/action_about"
         android:title="@string/menu_item_about"/>
