--- a/app/src/main/res/layout/fragment_about_dialog.xml
+++ b/app/src/main/res/layout/fragment_about_dialog.xml
@@ -12,6 +12,7 @@
         android:layout_marginEnd="22dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
