--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,16 +174,39 @@
                 android:layout_columnWeight="1"/>
         </GridLayout>
 
+        <ImageButton
+            android:id="@+id/cursor_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/keyboard_button"
+            app:layout_constraintEnd_toStartOf="@id/keyboard_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/keyboard_button"
+            android:src="@drawable/ic_cursor_left"
+            android:backgroundTint="#00000000"/>
+
         <Button
             android:id="@+id/keyboard_button"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:backgroundTint="#00000000"
             android:text="@string/hide_dedicated_keyboard"
             android:textColor="?attr/textFillColor"
             android:layout_marginBottom="@dimen/dedicated_button_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="16dp" />
+            app:layout_constraintStart_toEndOf="@id/cursor_left"
+            app:layout_constraintEnd_toStartOf="@id/cursor_right"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageButton
+            android:id="@+id/cursor_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/keyboard_button"
+            app:layout_constraintStart_toEndOf="@id/keyboard_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/keyboard_button"
+            android:src="@drawable/ic_cursor_right"
+            android:backgroundTint="#00000000"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
