Add support for undo action. Available only for once.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,4 +18,10 @@
 
     <item android:id="@+id/action_about"
         android:title="@string/menu_item_about"/>
+
+    <item android:id="@+id/action_undo"
+        android:icon="@drawable/ic_undo_disabled"
+        android:title="Undo"
+        android:enabled="false"
+        android:showAsAction="always"/>
 </menu>
