Optimization for dark theme display, fix cursor issue on undo.

--- a/app/src/main/res/values-night-v31/themes.xml
+++ b/app/src/main/res/values-night-v31/themes.xml
@@ -25,5 +25,6 @@
         <item name="textFillColor">#66FFFFFF</item>
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
         <item name="outlinedFillColor">@color/black</item>
+        <item name="actionBarIconColor">#c0c7cd</item>
     </style>
 </resources>
