--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,5 +23,6 @@
         <!-- Customize your theme here. -->
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
         <item name="outlinedFillColor">@color/black</item>
+        <item name="actionBarIconColor">#c0c7cd</item>
     </style>
 </resources>
