--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -23,6 +23,7 @@
         <!-- Customize your theme here. -->
         <item name="textFillColor">#66000000</item>
         <item name="outlinedFillColor">@color/white</item>
+        <item name="actionBarIconColor">#2a3836</item>
     </style>
 
     <style name="buttonShape">
