--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,16 +61,45 @@
             tools:text="Result: 0"
             app:layout_constraintBottom_toTopOf="@id/calc_button" />
 
+        <ImageButton
+            android:id="@+id/cursor_left"
+            android:layout_width="60dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintTop_toTopOf="@id/calc_button"
+            app:layout_constraintEnd_toStartOf="@id/calc_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/calc_button"
+            android:src="@drawable/ic_cursor_left"
+            android:background="@drawable/button_group_left"/>
+
         <Button
             android:id="@+id/calc_button"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/calculate"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginTop="4dp"
             android:layout_marginBottom="20dp"
             android:textColor="?attr/calcButtonFontColor"
             android:textSize="18sp"
             android:minHeight="@dimen/keyboard_button_minHeight"
+            android:background="@drawable/button_group_mid_fill"
+            app:layout_constraintEnd_toStartOf="@id/cursor_right"
+            app:layout_constraintStart_toEndOf="@id/cursor_left"
             app:layout_constraintBottom_toTopOf="@id/keyboard_grid"/>
+
+        <ImageButton
+            android:id="@+id/cursor_right"
+            android:layout_width="60dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            app:layout_constraintTop_toTopOf="@id/calc_button"
+            app:layout_constraintStart_toEndOf="@id/calc_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/calc_button"
+            android:src="@drawable/ic_cursor_right"
+            android:background="@drawable/button_group_right"/>
 
         <GridLayout
             android:id="@+id/keyboard_grid"
@@ -174,17 +203,6 @@
                 android:layout_columnWeight="1"/>
         </GridLayout>
 
-        <ImageButton
-            android:id="@+id/cursor_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/keyboard_button"
-            app:layout_constraintEnd_toStartOf="@id/keyboard_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/keyboard_button"
-            android:src="@drawable/ic_cursor_left"
-            android:backgroundTint="#00000000"/>
-
         <Button
             android:id="@+id/keyboard_button"
             android:layout_width="0dp"
@@ -196,17 +214,6 @@
             app:layout_constraintStart_toEndOf="@id/cursor_left"
             app:layout_constraintEnd_toStartOf="@id/cursor_right"
             app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <ImageButton
-            android:id="@+id/cursor_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/keyboard_button"
-            app:layout_constraintStart_toEndOf="@id/keyboard_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/keyboard_button"
-            android:src="@drawable/ic_cursor_right"
-            android:backgroundTint="#00000000"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
