--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -74,14 +74,15 @@
 
             <ImageButton
                 android:id="@+id/cursor_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="0dp"
+                android:layout_marginEnd="4dp"
                 app:layout_constraintTop_toTopOf="@id/calc_button"
                 app:layout_constraintEnd_toStartOf="@id/calc_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/calc_button"
                 android:src="@drawable/ic_cursor_left"
-                android:backgroundTint="#00000000"/>
+                android:background="@drawable/button_group_left"/>
 
             <Button
                 android:id="@+id/calc_button"
@@ -90,23 +91,25 @@
                 android:text="@string/calculate"
                 android:layout_marginBottom="20dp"
                 android:textColor="?attr/calcButtonFontColor"
-                android:layout_margin="20dp"
+                android:layout_margin="4dp"
                 android:textSize="18sp"
                 android:minHeight="@dimen/keyboard_button_minHeight"
+                android:background="@drawable/button_group_mid_fill"
                 app:layout_constraintEnd_toStartOf="@id/cursor_right"
                 app:layout_constraintStart_toEndOf="@id/cursor_left"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
             <ImageButton
                 android:id="@+id/cursor_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="4dp"
                 app:layout_constraintTop_toTopOf="@id/calc_button"
                 app:layout_constraintStart_toEndOf="@id/calc_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/calc_button"
                 android:src="@drawable/ic_cursor_right"
-                android:backgroundTint="#00000000"/>
+                android:background="@drawable/button_group_right"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
